# chart-gen

./: .gitignore  README.md  pyproject.toml  spagetti.py
scripts/: clear_all.sh  clear_logs.sh  clear_output.sh
src/chart_gen/: __init__.py  __main__.py  engine.py
src/chart_gen/providers/: __init__.py  base.py  yfinance_provider.py
src/chart_gen/renderers/: __init__.py  mpl_renderer.py
src/chart_gen/scene/: __init__.py  scene_graph.py
src/chart_gen/shapes/: __init__.py  base.py  pivot_leg.py  registry.py  rejection_zone.py
tests/: conftest.py  test_providers.py  test_registry.py  test_scene_graph.py  test_shapes.py
